kernel-wedge: Bump kernel to 6.5.0
Signed-off-by: Manivannan Sadhasivam <manivannan.sadhasivam@linaro.org>

--- a/kernel-wedge/linux-kernel-di-arm64/debian/changelog
+++ b/kernel-wedge/linux-kernel-di-arm64/debian/changelog
@@ -1,5 +1,5 @@
-linux-kernel-di-arm64 (6.2.0-rc1-custom-1) sid; urgency=medium
+linux-kernel-di-arm64 (6.5.0-custom-1) sid; urgency=medium
 
   * Non-maintainer upload.
 
- -- Manivannan Sadhasivam <manivannan.sadhasivam@linaro.org> Fri, 27 Dec 2022 12:12:00
+ -- Manivannan Sadhasivam <manivannan.sadhasivam@linaro.org>  Tue, 26 Sep 2023 12:40:00 +0000
